# aegis

./: .gitignore  Cargo.toml  README.md
crates/aegis-agent-framework/: Cargo.toml  README.md
crates/aegis-agent-framework/src/: agent.rs  context.rs  lib.rs  lifecycle.rs
crates/aegis-comms/: Cargo.toml
crates/aegis-comms/src/: framing.rs  lib.rs  manager.rs  protocol.rs  transport.rs
crates/aegis-comms/src/platform/: mod.rs  tokio_impl.rs
crates/aegis-comms/tests/: comms_tests.rs  framing_tests.rs  protocol_tests.rs
crates/aegis-consensus/: Cargo.toml
crates/aegis-consensus/src/: lib.rs
crates/aegis-core/: Cargo.toml  README.md
crates/aegis-core/src/: lib.rs  prelude.rs
crates/aegis-core/src/config/: mod.rs
crates/aegis-core/src/error/: mod.rs
crates/aegis-core/src/logging/: mod.rs
crates/aegis-core/src/platform/: mod.rs
crates/aegis-core/src/utils/: mod.rs
crates/aegis-core/src/version/: mod.rs
crates/aegis-ffi/: Cargo.toml  README.md
crates/aegis-ffi/examples/: anomaly_detection.rs
crates/aegis-ffi/src/: error.rs  lib.rs  setup.rs
crates/aegis-ffi/src/models/: anomaly_detection_ffi.rs  mod.rs
crates/agent-camplit/: Cargo.toml
crates/agent-camplit/src/: agent.rs  lib.rs  policy.rs  recovery.rs
crates/agent-reviezer/: Cargo.toml
crates/agent-reviezer/src/: agent.rs  audit.rs  lib.rs
src/: lib.rs
