[package]
name = "aegis-agent-framework"
version = "0.1.0"
edition = "2021"
authors = ["Aegis Team"]
description = "Agent framework for the Aegis platform"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
# Aegis internal dependencies
aegis-core = { path = "../aegis-core" }
aegis-comms = { path = "../aegis-comms" }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Byte handling
bytes = "1.4"

# Logging
tracing = "0.1"

# Concurrency primitives
tokio = { version = "1.28", features = ["sync"], optional = true }

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
mockall = "0.11"

[features]
default = []
with-tokio = ["tokio"] 