[package]
name = "aegis-comms"
version = "0.1.0"
edition = "2021"
authors = ["Aegis Team"]
description = "Platform-agnostic communication infrastructure for the Aegis framework"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
# Internal dependencies
aegis-core = { path = "../aegis-core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Efficient buffer handling
bytes = "1"

# Async utilities
futures = "0.3"
async-trait = "0.1"
byteorder = "1"

# Optional Tokio-based implementation
tokio = { version = "1", features = ["net", "io-util"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }

[features]
default = []
platform_tokio_net = ["tokio", "tokio-util"]

[dev-dependencies]
tokio-test = "0.4"
