[package]
name = "aegis-comms"
version = "0.1.0"
edition = "2021"
authors = ["Aegis Team"]
description = "Communication framework for the Aegis platform"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
# Aegis internal dependencies
aegis-core = { path = "../aegis-core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_arrays = "0.1"

# Efficient buffer handling
bytes = "1"

# Async utilities
futures = "0.3"
async-trait = "0.1"
byteorder = "1"

# Basic dependencies needed unconditionally
tokio = { version = "1", features = ["sync"] }

# Optional Tokio network-based implementation
tokio-net = { package = "tokio", version = "1", features = ["rt", "net", "io-util", "time"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }

[features]
default = []
platform_tokio_net = ["tokio-net", "tokio-util"]

[dev-dependencies]
tokio-test = "0.4"
