[package]
name = "aegis-comms"
version = "0.1.0"
edition = "2021"
description = "Communication layer for the Aegis agent framework"
license = "MIT OR Apache-2.0"

[features]
default = []
platform_tokio_net = ["tokio", "tokio-util"]

[dependencies]
aegis-core = { path = "../aegis-core" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"
byteorder = "1.5"

# Optional dependencies enabled by features
tokio = { version = "1", features = ["net", "io-util"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] } # Full features for testing
