[package]
name = "aegis-consensus"
version = "0.1.0"
edition = "2021"
authors = ["Aegis Team"]
description = "Consensus framework for the Aegis platform"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
# Aegis internal dependencies
aegis-core = { path = "../aegis-core" }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0" 