[package]
name = "aegis-core"
version = "0.1.0"
edition = "2021"
authors = ["Aegis Team"]
description = "Core platform-agnostic components for the Aegis framework"
license = "MIT OR Apache-2.0"
readme = "README.md"

# Cross-platform support flags
rust-version = "1.70"

[dependencies]
# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Version handling
semver = "1.0"

# Time and date
chrono = "0.4"

# UUID generation
uuid = { version = "1.3", features = ["v4"] }

# Cryptography
sha2 = "0.10"
base16ct = { version = "0.2", features = ["alloc"] }
aes-gcm = "0.10"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.5"
