[package]
name = "agent-reviezer"
version = "0.1.0"
edition = "2021"
description = "Aegis Review Agent (reviezer_ai) - Responsible for auditing and log analysis"

[dependencies]
aegis-agent-framework = { path = "../aegis-agent-framework" }
aegis-comms = { path = "../aegis-comms" }
async-trait = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4" 